# namedrop

./: Changelog  LICENSE  Makefile.in  Makefile.inc.in  OS_STATUS  README  TODO  YOU_REALLY_WANT_TO_INSTALL_THIS_LIBRARY  config.h.in  configure  configure.ac  default.conf.in  dnspkt.h  getopts.c  getopts.h  main.c  main.h  misc.c  misc.h  myadns.c  myadns.h  readconf.c  readconf.h  settings.h
attic/: adns_gnuanl.c  adns_gnuanl.h  gnu_adns  gnu_adns.c  gnu_adns.h
docs/: Makefile  man.1  man.tex
ext/: _xdebug.c  _xdebug.h  _xmalloc.c  _xmalloc.h  chtbl.c  chtbl.h  cidr.c  cidr.h  fread.c  fread.h  hash.c  hash.h  standard_dns.c  standard_dns.h  xmalloc.c  xmalloc.h
libs/: c-ares
scripts/: _auto.sh  mkdist.sh  mkslackpkg  runtests.sh
sql/: pgsql_schema.sql
wordlists/: WARNING  prune
